--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,24 @@
   *{
     box-sizing: border-box;
   }
+
+  #search {
+    background-position: 10px 12px; /* Position the search icon */
+    background-repeat: no-repeat; /* Do not repeat the icon image */
+    width: 100%; /* Full-width */
+    font-size: 16px; /* Increase font-size */
+    padding: 12px 12px; /* Add some padding */
+    border: 1px solid #ddd; /* Add a grey border */
+    border-radius: 6px;
+    margin: 16px 0px;
+    background-color: rgba(255, 255, 255, 0.95);
+  }
+
   
+  ul {
+    padding: 16px 0px;
+    padding-inline-start: 0px;
+  }
   body {
     font-family: 'Open Sans', sans-serif;
     background-color: var(--primary-color);
@@ -51,6 +68,10 @@
     text-align: center;
     align-items: center;
     margin-top: 5rem;
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 24px;
+    border-radius: 8px;
+    max-width: 900px;
   }
   
   .navbar {
@@ -65,12 +86,6 @@
   .pokemon-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  p {
-    font-size: 14px;
-    font-weight: 400;
-    color: rgb(0, 0, 0, .8);
   }
 
   h1 {
@@ -106,12 +121,20 @@
     align-items: center;
     font-weight: 600;
     font-size: 16px;
+    white-space: no-wrap;
+    width: fit-content;
+    color: black;
   }
 
   p {
-    white-space: nowrap;
+    white-space: normal;
+    width: fit-content;
     margin: 8px 0px 8px 0px;
-    }
+    text-align: left; 
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(0, 0, 0, .7);   
+  }
   
   /* media queries */
   @media all and (max-width : 500px) {
